# Bg_event_bot

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/clients/: bgg.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/dependencies/: admin.py  auth.py
backend/app/schemas/: game.py  import_job.py  meetup.py  telegram_chat_topic.py  user.py
backend/app/services/: bgg_import.py  games.py  meetups.py  telegram_chat_topics.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_bgg_expands_ids_cached.py  0003_add_meetup_telegram_fields.py  0004_add_telegram_chat_topics.py  0005_add_telegram_chat_members.py
bot/app/: main.py  router.py
bot/app/filters/: admin.py
bot/app/handlers/: games.py  imports.py  meetups.py  profile.py  random_game.py  start.py
bot/app/keyboards/: admin.py  games.py  main_menu.py  meetups.py
bot/app/middlewares/: user_context.py
bot/app/services/: backend_api.py  game_service.py
bot/app/states/: create_meetup.py  import_bgg.py  random_game.py
bot/app/texts/: __init__.py  messages.py
bot/app/utils/: game_player_counts.py  meetup_datetime.py
docker/: Dockerfile  docker-compose.yml  wait-for-postgres.sh
docker/postgres/: init.sql
tests/: conftest.py
tests/fixtures/: games.py  meetups.py  users.py
tests/integration/api/: test_games.py  test_imports.py  test_meetups.py  test_users.py
tests/integration/db/: test_constraints.py
tests/unit/bot/: test_games_handler.py  test_group_meetup_card.py  (+3 more)
(+27 files in other folders)
