[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boardgames-meetup-bot"
version = "0.1.0"
description = "Telegram bot and internal API for organizing board game meetups."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.135,<0.136",
    "uvicorn[standard]>=0.43,<0.44",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.18,<1.19",
    "psycopg[binary]>=3.3,<3.4",
    "pydantic-settings>=2.13,<2.14",
    "bgg-api>=1.1,<1.2",
    "aiogram>=3.27,<3.28",
    "httpx>=0.28,<0.29",
    "Pillow>=10.0,<11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<9.1",
    "pytest-asyncio>=1.3,<1.4",
    "pytest-cov>=7.1,<7.2",
    "ruff>=0.15,<0.16",
]

[tool.setuptools]
packages = [
    "backend",
    "backend.app",
    "backend.app.api",
    "backend.app.api.routes",
    "backend.app.clients",
    "backend.app.core",
    "backend.app.db",
    "backend.app.db.models",
    "backend.app.db.repositories",
    "backend.app.dependencies",
    "backend.app.schemas",
    "backend.app.services",
    "bot",
    "bot.app",
    "bot.app.filters",
    "bot.app.handlers",
    "bot.app.keyboards",
    "bot.app.middlewares",
    "bot.app.services",
    "bot.app.states",
    "bot.app.texts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
